Change font-size for next button, Add media queries for quiz box margin, Prevent next button from stretching to fill flex-container, Change margin for quiz box, Add styling for title class

--- a/style.css
+++ b/style.css
@@ -114,3 +114,11 @@ footer {
     font-size: 25px;
     margin-top: 1.5em;
 }
+
+/* MEDIA QUERIES */
+
+@media only screen and (max-width: 750px) {
+    .quiz-box {
+        margin: 1em 1em;
+    }
+}
